# clouseau

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_PHASES.md  DEVELOPER.md  LICENSE  Makefile  PROJECT_SPECIFICATION.md  README.md  alembic.ini.example  config.example.yaml  settings.example.yaml
.claude/: permissions.json  project-config.yaml
backend/: README.md  pyproject.toml  run_tests.sh
backend/.github/workflows/: tests.yml
backend/alembic/: env.py
backend/alembic/versions/: 487acf86f8f3_initial_models_session_conversation_.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: config.py  conversations.py  exchanges.py  export_import.py  search.py  sessions.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  conversation.py  exchange.py  search_index.py  session.py
backend/app/schemas/: __init__.py  config_schema.py  conversation.py  exchange.py  search_schema.py  session.py  settings_schema.py
backend/app/services/: config.py  export_service.py  search_service.py  session_service.py  settings.py
backend/app/services/llm_providers/: __init__.py  anthropic.py  azure.py  base.py  bedrock.py  mock.py  ollama.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_conversations.py  test_exchanges.py  test_main.py  test_sessions.py
backend/tests/integration/: test_anthropic_integration.py
backend/tests/unit/: test_anthropic_provider.py  test_config.py  test_health.py  test_llm_providers.py  test_models.py  test_settings.py
cli/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
cli/src/: index.tsx
docs/: API.md  CONFIGURATION.md  REQUIREMENTS.md  SEARCH_SYNTAX.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: setup_dev.bat  setup_dev.sh  setup_user.bat  setup_user.sh
(+70 files in other folders)
